--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,6 +1,6 @@
 "rules": {
     "at-rule-empty-line-before": [ "always", {
-      except: ["blockless-group"],
+      except: ["blockless-after-blockless"],
       ignore: ["after-comment"],
     } ],
     "at-rule-name-case": "lower",
@@ -37,6 +37,7 @@
     "function-comma-space-before": "never",
     "function-linear-gradient-no-nonstandard-direction": true,
     "function-max-empty-lines": 1,
+    "function-name-case": "lower",
     "function-parentheses-space-inside": "never",
     "function-url-quotes": "never",
     "function-whitespace-after": "always",
@@ -49,7 +50,6 @@
     } ],
     "media-feature-colon-space-after": "always",
     "media-feature-colon-space-before": "never",
-    "media-feature-no-missing-punctuation": true,
     "media-feature-range-operator-space-after": "always",
     "media-feature-range-operator-space-before": "always",
     "media-query-list-comma-newline-after": "always-multi-line",
@@ -63,11 +63,8 @@
     "number-no-trailing-zeros": true,
     "property-case": "lower",
     "property-no-unknown": true,
-    "rule-nested-empty-line-before": [ "always", {
-      ignore: ["after-comment"],
-    } ],
-    "rule-non-nested-empty-line-before": [ "always", {
-      ignore: ["after-comment"],
+    "rule-empty-line-before": [ "always", {
+      except: ["after-single-line-comment"]
     } ],
     "selector-attribute-brackets-space-inside": "never",
     "selector-attribute-operator-space-after": "never",
