--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
     "url": "https://github.com/washingtonstateuniversity/alert.wsu.edu"
   },
   "devDependencies": {
-    "autoprefixer": "^6.3.1",
+    "autoprefixer": "^7.1.2",
     "grunt": "~1.0.1",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-concat": "~1.0.0",
     "grunt-contrib-csslint": "^2.0.0",
-    "grunt-contrib-cssmin": "~2.0.0",
+    "grunt-contrib-cssmin": "~2.2.1",
     "grunt-postcss": "^0.8.0",
     "grunt-phpcs": "^0.4.0",
-    "grunt-stylelint": "^0.7.0"
+    "grunt-stylelint": "^0.9.0",
+    "stylelint": "^8.0.0"
   }
 }
